feat: close production P0 and P1 reliability gaps